--- a/app/_shared/components/garageSelector/GarageSelector.scss
+++ b/app/_shared/components/garageSelector/GarageSelector.scss
@@ -22,6 +22,6 @@ $imgHeight: 80px;
 }
 
 .emptyDropdown{
-  height: $garageSelecterDropdownHeight;
+  height: $garageSelectorDropdownHeight;
   background: $gray;
 }
