--- a/app/_shared/components/masterPage/MasterPage.scss
+++ b/app/_shared/components/masterPage/MasterPage.scss
@@ -83,7 +83,11 @@ $hintWidth:          180px;
     }
 
     >.children {
-      padding: 0 20px;
+      padding-left:  20px;
+
+      // padding-right: 100px;
+
+      margin-right: auto;
     }
   }
 }
